--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-17  Daniel Jacobowitz  <drow@mvista.com>
+
+	* gdb.base/annota3.exp: Add missing newline.
+
 2003-08-06  Michael Chastain  <mec@shout.net>
 
 	* gdb.java/jmisc1.exp: Add test for pr gdb/1322.
