--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,19 @@
 2003-08-17  Daniel Jacobowitz  <drow@mvista.com>
 
+	* linux-nat.c (PTRACE_O_TRACEVFORKDONE, PTRACE_O_TRACEEXIT): Define.
+	(PTRACE_EVENT_VFORKDONE, PTRACE_EVENT_EXIT): Define.
+	(linux_parent_pid, linux_supports_tracevforkdone_flag): New variable.
+	(linux_test_for_tracefork): Set linux_supports_tracevforkdone_flag.
+	(linux_supports_tracevforkdone): New function.
+	(linux_enable_event_reporting): Enable TRACEVFORK, TRACEEXEC, and
+	TRACEVFORKDONE.
+	(child_follow_fork): Handle vfork.
+	(linux_handle_extended_wait): Likewise.  Also handle exec.
+	(child_insert_vfork_catchpoint, child_insert_exec_catchpoint): Enable.
+	* NEWS: Mention fork tracing.
+
+2003-08-17  Daniel Jacobowitz  <drow@mvista.com>
+
 	* lin-lwp.c (child_wait): Call linux_record_stopped_pid.
 
 2003-08-17  Daniel Jacobowitz  <drow@mvista.com>
