--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-17  Michael Chastain  <mec@shout.net>
+
+	* symfile.c (find_sym_fns): Remove special case for apollo target.
+
 2003-08-17  Daniel Jacobowitz  <drow@mvista.com>
 
 	* linux-nat.c (PTRACE_O_TRACEVFORKDONE, PTRACE_O_TRACEEXIT): Define.
