--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,10 @@
+2003-08-18  Michal Ludvig  <mludvig@suse.cz>
+
+	* config/i386/nm-x86-64linux.h (LINUX_CHILD_POST_STARTUP_INFERIOR):
+	Define.
+	* i386-linux-nat.c: Include "linux-nat.h".
+	(child_post_startup_inferior): New function.
+	
 2003-08-18  Mark Kettenis  <kettenis@gnu.org>
 
 	* i386-tdep.c (i386_analyze_register_saves): Handle register saves
