--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,21 @@
+2003-08-20  Michael Snyder  <msnyder@redhat.com>
+            Kevin Buettner  <kevinb@redhat.com>
+
+	* frv-tdep.c (gdb_string.h, frame.h, trad-frame.h): Include.
+	(frv_frame_init_saved_regs): Add declaration.
+	(frame_extra_info): Add new field ``saved_regs''.
+	(frv_frame_chain, frv_frame_saved_pc, frv_analyze_prologue)
+	(frv_skip_prologue, frv_init_extra_frame_info, frv_pop_frame_regular):
+	Update frame related code.
+	(frv_extract_struct_value_address): Adjust formatting.
+	* Makefile.in (frv-tdep.o): Update dependencies.
+	* config/frv/tm-frv.h (target_insert_watchpoint)
+	(target_remove_watchpoint, target_insert_hw_breakpoint)
+	(target_remove_hw_breakpoint): Delete these macros.
+	(remote_insert_watchpoint, remote_remove_watchpoint)
+	(remote_insert_hw_watchpoint, remote_remove_hw_watchpoint): Remove
+	these declarations.
+
 2003-08-20  Michael Chastain  <mec@shout.net>
 
 	* defs.h (ENUM_BITFIELD): New macro.
