--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-22  Daniel Jacobowitz  <drow@mvista.com>
+
+	* gnu-v3-abi.c (gnuv3_baseclass_offset): Check whether
+	TYPE_VPTR_FIELDNO is valid.
+
 2003-08-19  Mark Kettenis  <kettenis@gnu.org>
 
 	* utils.c (set_width_command): Remove prototypes.
