--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-25  Daniel Jacobowitz  <drow@mvista.com>
+
+	PR java/1322
+	* dwarf2-frame.c (dwarf2_frame_find_fde): Check whether any FDEs are
+	available before calling SECT_OFF_TEXT.
+
 2003-08-25  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* ia64-tdep.c (pseudo_regs): New enum that lists gr32-gr127, p0-p63, 
