--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-26  Jason Merrill  <jason@redhat.com>
+
+	* dwarf2read.c (dwarf_attr_name): Move DW_AT_MIPS_linkage_name
+	case out of #ifdef MIPS block.
+
 2003-08-25  Daniel Jacobowitz  <drow@mvista.com>
 
 	PR java/1322
