--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-27  Michael Chastain  <mec@shout.net>
+
+	* config/djgpp/fnchange.lst: Add gdb/testsuite/gdb.mi/mi2-var-*.
+
 2003-08-27  Andrew Cagney  <cagney@redhat.com>
 
 	* alpha-osf1-tdep.c (alpha_call_dummy_address): Delete function.
