--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-27  Andrew Cagney  <cagney@redhat.com>
+
+	* dsrec.c: Include "gdb_string.h".
+	* Makefile.in (dsrec.o): Update dependencies.
+
 2003-08-27  Michael Chastain  <mec@shout.net>
 
 	* config/djgpp/fnchange.lst: Add gdb/testsuite/gdb.mi/mi2-var-*.
